--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example1.user.boardexam"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,5 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.facebook.fresco:fresco:1.13.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.yongbeam:Android-Y-PhotoPicker:1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
